# udacity_computer_vision

./: README.md
template_matching/: CMakeLists.txt
template_matching/include/: template_match.hpp
template_matching/src/: template_match.cpp
